AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    src

MAINTAINERCLEANFILES = \
    Makefile.in \
    configure \
    aclocal.m4 \
    build-aux/depcomp \
    build-aux/install-sh \
    build-aux/missing \
    m4/libtool.m4 \
    m4/ltoptions.m4 \
    m4/ltsugar.m4 \
    m4/ltversion.m4 \
    m4/lt~obsolete.m4
