AM_CPPFLAGS = \
    -I$(top_srcdir)/src

bin_PROGRAMS = ldap-server

ldap_server_SOURCES = \
    LdapServer.cpp \
    GenericAsnOneObject.cpp \
    GenericAsnOneObject.h \
    IntegerAsnOneObject.cpp \
    IntegerAsnOneObject.h \
    LdapBindAsnOneObject.cpp \
    LdapBindAsnOneObject.h \
    Log.cpp \
    Log.h \
    SequenceAsnOneObject.cpp \
    SequenceAsnOneObject.h \
    StreamBuffer.cpp \
    StreamBuffer.h \
    TcpConnection.cpp \
    TcpConnection.h \
    TcpServer.cpp \
    TcpServer.h

MAINTAINERCLEANFILES = \
    Config.h.in \
    Makefile.in
