AM_CPPFLAGS = \
    -I$(top_srcdir)/src

noinst_LTLIBRARIES = libasn-one-objects.la

libasn_one_objects_la_SOURCES = \
    GenericAsnOneObject.cpp \
    GenericAsnOneObject.h \
    IntegerAsnOneObject.cpp \
    IntegerAsnOneObject.h \
    LdapBindAsnOneObject.cpp \
    LdapBindAsnOneObject.h \
    SequenceAsnOneObject.cpp \
    SequenceAsnOneObject.h

MAINTAINERCLEANFILES = \
    Makefile.in
