AM_CPPFLAGS = \
    -I$(top_srcdir)/src

noinst_LTLIBRARIES = libasn-one-objects.la

libasn_one_objects_la_SOURCES = \
    EnumeratedAsnOneObject.cpp \
    EnumeratedAsnOneObject.h \
    GenericAsnOneObject.cpp \
    GenericAsnOneObject.h \
    IntegerAsnOneObject.cpp \
    IntegerAsnOneObject.h \
    LdapBindRequestAsnOneObject.cpp \
    LdapBindRequestAsnOneObject.h \
    LdapBindResponseAsnOneObject.cpp \
    LdapBindResponseAsnOneObject.h \
    LdapUnbindRequestAsnOneObject.cpp \
    LdapUnbindRequestAsnOneObject.h \
    OctetStringAsnOneObject.cpp \
    OctetStringAsnOneObject.h \
    SequenceAsnOneObject.cpp \
    SequenceAsnOneObject.h

MAINTAINERCLEANFILES = \
    Makefile.in
