AM_CPPFLAGS = \
    -I$(top_srcdir)/src

noinst_LTLIBRARIES = libldap.la

libldap_la_SOURCES = \
	GenericOperation.cpp \
	GenericOperation.h \
	BindRequestOperation.cpp \
	BindRequestOperation.h \
	BindResponseOperation.cpp \
	BindResponseOperation.h \
    LdapMessage.cpp \
    LdapMessage.h \
	SearchRequestOperation.cpp \
	SearchRequestOperation.h \
	UnbindRequestOperation.cpp \
	UnbindRequestOperation.h

MAINTAINERCLEANFILES = \
    Makefile.in
